[package]
name = "notes"
version = "0.1.0"
authors = ["timur"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cli
clap = {version = "~2.27.0", features = ["yaml"]}

# file i/o
serde_json = "1.0.59"
chrono = "0.4.19"

# encryption
aes = "0.6.0"
rand = "0.8.3"
block-modes = "0.7.0"
sha2 = "0.9.3"